fixing vercel deployment
